Work on the markdown version
 Changes to be committed:
	modified:   README.md
	modified:   latex/graphs.tex

--- a/latex/graphs.tex
+++ b/latex/graphs.tex
@@ -278,3 +278,28 @@ https://algodaily.com/lessons/implementing-graphs-edge-list-adjacency-list-adjac
 
 
 https://math.libretexts.org/Bookshelves/Combinatorics_and_Discrete_Mathematics/Combinatorics_and_Graph_Theory_(Guichard)/05%3A_Graph_Theory/5.01%3A_The_Basics_of_Graph_Theory
+
+
+Olá, eu estou escrevendo um post sobre grafos e gostaria do seu auxílio.
+Já tenho um rascunho. Mas gostaria que você me retornasse uma sugestão para o post.
+Divida o texto nos seguintes tópicos:
+- Overview:
+  - Conceitos, origem
+  - Algoritmos para percorrer grafos, definir o menor percurso, breadth-first search, depth-first search, dijkstra algorithm.
+- Implementation Strategies
+  - Edge List
+  - Adjacency Matrix
+  - Adjacency List
+  - Citar a complexidade assintótica dos principais métodos em cada uma das abordagens
+  - Depois eu vou mencionar o repo no qual estou trabalhando, o graphs-ds (ainda em andamento)
+- Applications
+  - Aplicações práticas
+    - Redes neurais, redes sociais, redes de computadores.
+    - Mencionar aplicações existentes (e.g. Neo4j)
+    - etc.
+- Conclusion
+- References
+
+O texto deve ser em Inglês e no formato markdown.
+É fundamental que sejam citados os autores que devem constar na seção de referências bibliográficas.
+
