Test including an image
 Changes to be committed:
	modified:   README.md
	new file:   images/eq1.png
	modified:   latex/graphs.tex

--- a/latex/graphs.tex
+++ b/latex/graphs.tex
@@ -103,6 +103,9 @@
     number of incident edges from \emph{v}.
 
     If \emph{G} is a graph with \emph{m} edges, then:
+
+    ![Equation 1](./images/eq1.png)
+
     \begin{equation} \label{eq1}
         \sum_{v \in G} deg(v) = 2m
     \end{equation}
